# stormclaw

./: Cargo.toml  README.md
benches/: Cargo.toml  agent_loop.rs  agent_throughput.rs  helper.rs  message_bus.rs  tool_execution.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: agent.rs  channels.rs  cron.rs  gateway.rs  mod.rs  onboard.rs  status.rs
cli/src/commands/config/: edit.rs  mod.rs  set.rs  show.rs  validate.rs
cli/src/commands/session/: clear.rs  export.rs  import.rs  list.rs  mod.rs  show.rs
cli/tests/: regression_cli_smoke.rs
control-plane/: package-lock.json  package.json
control-plane/src/: index.css
control-plane/src/app/: App.tsx
control-plane/src/components/: StatCard.tsx
control-plane/src/hooks/: useRealtimeOrPolling.ts
control-plane/src/pages/: ChannelsPage.tsx  CronJobsPage.tsx  DashboardPage.tsx
control-plane/src/services/: apiClient.ts  metricsParser.test.ts  metricsParser.ts  realtimeClient.ts
control-plane/src/types/: monitor.ts
control-plane/src/utils/: time.ts
crates/channels/: Cargo.toml  README.md
crates/channels/src/: base.rs  cli.rs  converter.rs  discord.rs  email.rs  lib.rs  manager.rs  monitor.rs  slack.rs  telegram.rs  template.rs  testing.rs  webhook.rs  whatsapp.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  schema.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/agent/: context.rs  docker_exec.rs  loop.rs  mod.rs  path_policy.rs  runtime_state.rs  subagent.rs  tool_executor.rs  tool_policy.rs
crates/core/src/agent/tools/: base.rs  filesystem.rs  message.rs  mod.rs  registry.rs  shell.rs  spawn.rs  wasm_guest.rs  web.rs
crates/core/src/bus/: events.rs  mod.rs  queue.rs
crates/core/src/memory/: mod.rs
crates/core/src/providers/: base.rs  mod.rs  openai.rs
crates/core/src/session/: manager.rs  mod.rs
crates/core/src/skills/: mod.rs
crates/core/src/testing/: fixtures.rs  mock_provider.rs  mod.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/src/common/: helpers.rs  mod.rs  setup.rs
crates/integration-tests/tests/: regression_agent_loop.rs  regression_config.rs  regression_cron.rs  regression_message_bus.rs
crates/services/: Cargo.toml  README.md
crates/services/src/: config_reload.rs  cron.rs  gateway.rs  heartbeat.rs  lib.rs  lifecycle.rs  logging.rs  metrics.rs  supervisor.rs
crates/stormclaw-safety/: Cargo.toml
crates/stormclaw-safety/src/: leak_detector.rs  lib.rs
crates/stormclaw-wasm-runtime/: Cargo.toml
crates/stormclaw-wasm-runtime/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs  lib.rs  metrics.rs  path.rs  time.rs
docs/: API_REFERENCE.md  COMPARISON_REPORT.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DETAILED_DESIGN.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROCESS.md  IMPLEMENTATION.md  INDEX.md  MONITORING_UI.md  PROJECT_ANALYSIS.md  PROJECT_STATUS.md  SECURITY_PROFILES.md  SESSION_SUMMARY.md  TODO.md  USER_GUIDE.md
scripts/: publish.ps1
tests/: README.md
