[package]
name = "stormclaw-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stormclaw"
path = "src/main.rs"

[dependencies]
# 工作空间依赖
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
rustyline = { workspace = true }
comfy-table = { workspace = true }
uuid = { workspace = true }

# CLI 特定依赖
which = "6.0"
tokio-tungstenite = { workspace = true }

# 内部依赖
stormclaw-core = { path = "../crates/core" }
stormclaw-config = { path = "../crates/config" }
stormclaw-channels = { path = "../crates/channels" }
stormclaw-services = { path = "../crates/services" }
stormclaw-utils = { path = "../crates/utils" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
