[package]
name = "stormclaw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 工作空间依赖
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
async-openai = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
cfg-if = "1.0"

# 内部依赖
stormclaw-utils = { path = "../utils" }
stormclaw-config = { path = "../config" }
stormclaw-safety = { path = "../stormclaw-safety" }
stormclaw-wasm-runtime = { path = "../stormclaw-wasm-runtime", optional = true }

[features]
default = []
test-utils = []
wasm-tools = ["dep:stormclaw-wasm-runtime"]

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
