[package]
name = "stormclaw-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Workspace-level regression / integration tests for stormclaw"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

stormclaw-core = { path = "../core", features = ["test-utils"] }
stormclaw-config = { path = "../config" }
stormclaw-services = { path = "../services" }
stormclaw-utils = { path = "../utils" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
