[package]
name = "stormclaw-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 工作空间依赖
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-cron-scheduler = { workspace = true }
cron = { workspace = true }

# 额外依赖
futures-util = "0.3"
async-trait = { workspace = true }
notify = "7.0"

# HTTP API (gateway)
axum = { version = "0.7", optional = true }

# 内部依赖
stormclaw-core = { path = "../core" }
stormclaw-channels = { path = "../channels" }
stormclaw-config = { path = "../config" }
stormclaw-utils = { path = "../utils" }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
tower = { version = "0.4", features = ["util"] }

[features]
default = ["gateway"]
gateway = ["axum"]
