[package]
name = "stormclaw-safety"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
description = "Prompt injection defense, validation, secret leak detection (vendored from NEAR AI ironclaw_safety)"
repository = "https://github.com/deepelementlab/stormclaw"

[dependencies]
aho-corasick = "1"
regex = "1"
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"
